tests/baselines/reference/mergedInterfacesWithConflictingPropertyNames.errors.txt
==== tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts (3 errors) ====
    interface A {
        x: string; // error
    }
    
    interface A {
        x: number;
        ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    module M {
        interface A<T> {
            x: T;
        }
    
        interface A<T> {
            x: number;  // error
            ~
!!! error TS2300: Duplicate identifier 'x'.
        }
    }
    
    module M2 {
        interface A<T> {
            x: T;
        }   
    }
    
    module M2 {
        interface A<T> {
            x: number;  // ok, different declaration space than other M2
        }
    }
    
    module M3 {
        export interface A<T> {
            x: T;
        }
    }
    
    module M3 {
        export interface A<T> {
            x: number;  // error
            ~
!!! error TS2300: Duplicate identifier 'x'.
        }
    }